# ripgrep

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  cargo-bazel-lock.json
crates/grep/: BUILD.bazel
crates/matcher/: BUILD.bazel
crates/printer/: BUILD.bazel
scripts/: prebuild-rust-tools.sh
